[csrf-dash-conflict] resolve issue w/csrf dash

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,9 @@
 <div class="container">
   
   <div class="row">
-    Links for John Edmiston!
-    
+    <h3>Links for John Edmiston</h3>
+
+    I am an experienced generalist programmer and engineer, who loves integrating across software/hardware levels, and from backend to front end. For a collection of proof of concept / starter work I put together for this site, please peruse below!
     <div class="col-12">
       <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella Landing page frontend</a>
    <a href="/admin" class="btn btn-info btn-block">Admin panel integration</a>                  
